# lightseeker

./: .gitignore  Cargo.toml  index.html
resources/: bell.anim  bell.skin  bell.skl  export_script.py  person.anim  person.skin  person.skl  walk.anim  walk.skin  walk.skl
src/: app.rs  camera.rs  color.rs  controls.rs  download.rs  gl_context.rs  light_src.rs  main.rs  matrix.rs  object.rs  point_light_src.rs  shape.rs  transform.rs  vector.rs  world.rs
src/entity_manager/: entity.rs  entity_factory.rs  id_repository.rs  mod.rs  script.rs
src/geometry/: aabb.rs  matrix.rs  mod.rs  raycast.rs  transform.rs  vector.rs
src/light/: directional.rs  mod.rs  point.rs
src/objects/: mod.rs  obj_parser.rs  object.rs  particles.rs  prefab.rs  rigid_body.rs  shape.rs  skeleton.rs  texture.rs  vertex_data.rs
src/objects/parsers/: animation.rs  mod.rs  shape.rs  skeleton.rs  skinning.rs
src/shaders/: checkerboard.rs  helpers.js  mod.rs  particles.rs  render_light.rs  render_point_light.rs  view.rs  wire_light.rs
src/shaders/src/: checkerboard.frag  copy_image.frag  ident.vert  particles.frag  particles.vert  render_light.frag  render_light.vert  render_point_light.frag  render_point_light.vert  view.frag  view.vert  wire_light.frag  wire_light.vert
